--- a/src/main/resources/static/ProductListPage.html
+++ b/src/main/resources/static/ProductListPage.html
@@ -13,7 +13,7 @@
 
 </head>
 <body ng-app="productList">
-<div class="container" ng-controller="productListController">
+<div class="container" ng-controller="productListController" ng-init="getProductListPage()">
     <h2>Products List</h2>
     <table class="table">
         <thead>
@@ -21,7 +21,6 @@
             <td>ID</td>
             <td>Title</td>
             <td>Cost</td>
-            <td></td>
         </tr>
         </thead>
         <tbody>
@@ -29,6 +28,16 @@
             <td>{{product.id}}</td>
             <td>{{product.title}}</td>
             <td>{{product.cost}}</td>
+            <td>
+                <div>
+                    <button ng-click="increaseCost(product)" type="submit" ng-model="product.cost" class="btn btn-primary">+</button>
+                </div>
+            </td>
+            <td>
+                <div>
+                    <button ng-click="decreaseCost(product)" type="submit" ng-model="product.cost" class="btn btn-primary">-</button>
+                </div>
+            </td>
         </tr>
         </tbody>
     </table>
