--- a/src/main/resources/static/ProductListPage.html
+++ b/src/main/resources/static/ProductListPage.html
@@ -38,6 +38,11 @@
                     <button ng-click="decreaseCost(product)" type="submit" ng-model="product.cost" class="btn btn-primary">-</button>
                 </div>
             </td>
+            <td>
+                <div>
+                    <button ng-click="deleteProduct(product)" type="submit" ng-model="product.id" class="btn btn-primary">Delete</button>
+                </div>
+            </td>
         </tr>
         </tbody>
     </table>
