--- a/src/main/resources/static/AddNewProduct.html
+++ b/src/main/resources/static/AddNewProduct.html
@@ -15,12 +15,12 @@
 <body ng-app="addNewProductApp">
 <div class="container" ng-controller="addNewProductController">
     <form name="newProductForm">
-        <div class="mb-3 row">
-            <label for="productId" class="col-sm-2 col-form-label">ID</label>
-            <div class="col-sm-10">
-                <input type="number" class="form-control" id="productId" ng-model="product.id" name="id">
-            </div>
-        </div>
+<!--        <div class="mb-3 row">-->
+<!--            <label for="productId" class="col-sm-2 col-form-label">ID</label>-->
+<!--            <div class="col-sm-10">-->
+<!--                <input type="number" class="form-control" id="productId" ng-model="product.id" name="id">-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="mb-3 row">
             <label for="productName" class="col-sm-2 col-form-label">Title</label>
             <div class="col-sm-10">
